Invert Selection operator is not working foar animation channels #42648

Closed
opened 2014-11-19 16:13:16 +01:00 by ronan ducluzeau · 7 comments

System Information
Ubuntu 14.04 64bits NVIDIA Titan Black

Blender Version
Broken: cd54f07
Worked: (optional)

Short description of error
In graph editor or dopesheet, when a channel is selected , Ctrl I (assigned to anim.channels_select_all_toggle) is supposed to deselect it and select the unselected ones.
In practice, it only deselect current selection.

Exact steps for others to reproduce the error

In attached .blend, position mouse cursor over source region and press Ctrl I.
As expected, Y channel is deselected. But X and Z channels are still unselected, too.IS_bug.blend

**System Information** Ubuntu 14.04 64bits NVIDIA Titan Black **Blender Version** Broken: cd54f07 Worked: (optional) **Short description of error** In graph editor or dopesheet, when a channel is selected , Ctrl I (assigned to anim.channels_select_all_toggle) is supposed to deselect it and select the unselected ones. In practice, it only deselect current selection. **Exact steps for others to reproduce the error** In attached .blend, position mouse cursor over source region and press Ctrl I. As expected, Y channel is deselected. But X and Z channels are still unselected, too.[IS_bug.blend](https://archive.blender.org/developer/F124862/IS_bug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @zeauro

Added subscriber: @zeauro
Joshua Leung self-assigned this 2014-11-20 05:39:31 +01:00

This issue was referenced by 2288d738bf

This issue was referenced by 2288d738bf5a14393ce2cf7687cac542146e504c
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 2288d738bf.

Closed by commit 2288d738bf.

This issue was referenced by 6147ad35962a55f5a97f9847454dc6def383067b

This issue was referenced by 6147ad35962a55f5a97f9847454dc6def383067b

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42648
No description provided.