Bugfix T42648: Invert Selection operator is not working for animation channels

The wrong selection mode was being used/passed to operators.